    and PURGE subcommands, use the --auto-remove option of apt-get;
    Closes: #444150
  * INSTALL, INSTALLSUGGESTED, NEWUPGRADES, AUTODOWNLOAD: use --auto-remove
    option. Seems a more sane way to have that as default, and leads to a
    less-surprising REMOVE/PURGE experience (whereby it would remove packages
    that are not related to packages being removed).
  * {REMOVE,PURGE}ORPHANS: fix exception that happened with --simulate option
  * AUTODOWNLOAD, TOUPGRADE, NEWDETAIL: fix an exception that occurs when
    ~/.wajig dir is removed
  * NEWUPGRADES: doesn't seem to provide much more than TOUGPRADE, so remove
  * AUTODOWNLOAD, NEW: get rid of --install option; it's overkill
  * PURGEREMOVE: remove --teaching and --simulate options; they display
    incomplete output
  * LISTALL: this was mistakenly remove, so restore it
  * LIST{CACHE,NAMES,PACKAGES,STATUS}: restore ability to filter on a pattern;
    some people complained about the removal of the feature (in 2.3)
  * TOUPGRADE: sort the list, again

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Wed, 04 Apr 2012 22:03:22 +0200

wajig (2.4.1) unstable; urgency=low

  * 2.4 made an assumption that a user that isn't in 'sudo' group
    is not a sudoer. That's not the case (and it's a bad assumption).

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Tue, 27 Mar 2012 16:07:31 +0200

wajig (2.4) unstable; urgency=low

  * README, TODO, NEWS: if doc path (/usr/share/doc/<package name>) for
    a given package isn't found, check if such a package even exists.
  * INSTALL, INSTALLSUGGESTED: make --recommends and --norecommends options
    conflict.
  * INSTALL: one can now specify a mixture of installables:
    * deb files
    * url files
    * normal packages
    Previously, only one of these types could be installed at a time
  * make bash completer also complete lower-case COMMANDS;
    patch by "Reuben Thomas" <rrt@sc3d.org>
  * Reinstate --simulate and --teaching options: